(BSR)[PRO] fix: focus visible on button (#21455)

--- a/pro/src/design-system/Button/Button.module.scss
+++ b/pro/src/design-system/Button/Button.module.scss
@@ -2,6 +2,7 @@
 @use "styles/mixins/_fonts.scss" as fonts;
 @use "styles/mixins/_size.scss" as size;
 @use "styles/mixins/_rem.scss" as rem;
+@use "styles/mixins/_outline.scss" as outline;
 
 // =============================================================================
 // MIXINS RÉUTILISABLES
@@ -64,6 +65,10 @@
       &.btn-tertiary {
         padding: var(--size-spacing-s);
       }
+    }
+
+    &:focus-visible {
+      @include outline.focus-outline;
     }
   }
 
